@@ -63,27 +63,27 @@
  * files
  */
 
-typedef char               _int8_t;
+typedef signed char        _int8_t;
 typedef unsigned char      _uint8_t;
 
-typedef short              _int16_t;
+typedef signed short       _int16_t;
 typedef unsigned short     _uint16_t;
 
-typedef int                _int32_t;
+typedef signed int         _int32_t;
 typedef unsigned int       _uint32_t;
 
-typedef long long          _int64_t;
+typedef signed long long   _int64_t;
 typedef unsigned long long _uint64_t;
 #define __INT64_DEFINED
 
 /* A pointer is 4 bytes */
 
-typedef int                _intptr_t;
+typedef signed int         _intptr_t;
 typedef unsigned int       _uintptr_t;
 
 /* This is the size of the interrupt state save returned by irqsave(). */
 
-typedef unsigned int irqstate_t;
+typedef unsigned int       irqstate_t;
 
 #endif /* __ASSEMBLY__ */
 
