@@ -63,10 +63,10 @@
  * files
  */
 
-typedef char               _int8_t;
+typedef signed char        _int8_t;
 typedef unsigned char      _uint8_t;
 
-typedef short              _int16_t;
+typedef signed short       _int16_t;
 typedef unsigned short     _uint16_t;
 
 /* Normally, mc68hc1x code is compiled with the -mshort option
@@ -75,20 +75,20 @@ typedef unsigned short     _uint16_t;
  */
 
 # if __INT__ == 16
-typedef long               _int32_t;
+typedef signed long        _int32_t;
 typedef unsigned long      _uint32_t;
 #else
-typedef int                _int32_t;
+typedef signed int         _int32_t;
 typedef unsigned int       _uint32_t;
 #endif
 
-typedef long long          _int64_t;
+typedef signed long long   _int64_t;
 typedef unsigned long long _uint64_t;
 #define __INT64_DEFINED
 
 /* A pointer is two bytes */
 
-typedef short              _intptr_t;
+typedef signed short       _intptr_t;
 typedef unsigned short     _uintptr_t;
 
 /* This is the size of the interrupt state save returned by irqsave()*/
