@@ -63,18 +63,18 @@
  * files
  */
 
-typedef char               _int8_t;
+typedef signed char        _int8_t;
 typedef unsigned char      _uint8_t;
 
-typedef short              _int16_t;
+typedef signed short       _int16_t;
 typedef unsigned short     _uint16_t;
 
-typedef int                _int32_t;
+typedef signed int         _int32_t;
 typedef unsigned int       _uint32_t;
 
 /* A pointer is 4 bytes */
 
-typedef int               _intptr_t;
+typedef signed int        _intptr_t;
 typedef unsigned int      _uintptr_t;
 
 /* This is the size of the interrupt state save returned by
